--- a/visualizations/recipients.html
+++ b/visualizations/recipients.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang=en>
+<link rel="icon" href="/images/favicon.png" type="image/png" />
+<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu+Mono">
+
 <head>
 	<meta charset="utf-8">
 	<title>first d3 eg with json</title>
@@ -7,68 +10,187 @@
 	 <!-- <script src="http://mbostock.github.com/d3/d3.v2.js"></script> -->
 	 <script src="./d3/d3.v3.js"></script>
 	<style>
-	ul{
+	ul{ left:50px;
+        position:relative;;
 		list-style-type: none;
 	}
+    .key{
+        float:right;
+        margin: 10px;;
+        line-height: 20px;;
+        position:absolute;
+        text-align: center;;
+        left: 823px;
+        opacity: 0.5;
+        font-family: Ubuntu Mono;
+        width:80px;
+    }
+    #sorting-menu{
+        display: inline;
+    }
+    #long{
+
+        background:rgb(140,225,0);
+        border-style: solid ;
+        border: rgb(140,225,0);
+    }
+    #short{
+        background:rgb(140,60,100);
+    }
+    #loading{
+        position: absolute;
+        text-align: center;;
+        margin-top:100px;
+        font-size:60px;;
+        width:100%;
+        z-index: -90;
+        font-family: Ubuntu Mono;    }
+    #letter{
+        position:absolute;
+        display: block;;
+        top:70px;
+        left:440px;
+        padding: 10px;
+        border: 2px;
+        border-style: solid;
+        border-color: grey;
+        width:380px;
+        z-index: -5;;
+        line-height: 25px;;
+        font-size: 14px;;
+        opacity: 0;
+        font-family: Ubuntu Mono;
+    }
+    svg{z-index: 10;
+        background: transparent;
+
+    }
+    #menu{
+        text-align: center;;
+    }
+        h5 {
+             position: relative;
+             left:0px;
+             display: inline;;
+             width: 100px;;
+             font-family: Ubuntu Mono;
+        }
 	</style>
 </head>
 
 <body>
 
 			<div id="menu">
-			<h2> Sort by: </h2>
-				<ul id="sorting-menu"></ul>
+			<h5> Sort by: </h5>
+		    <div id="sorting-menu"></div>
+			<h5>[select one]</h5>
+
 			</div>
+    <div id = 'loading'>loading</div>
+    <div id="letter"></div>
 
 	<script type="text/javascript">
 	var recipients = [];
 	var senders = [];
 	var recipOccurances = [];
 	var senderOccurances = [];
+    var urls = [];
+    var firstWords = [];
+    var avgCharcount = [];
+    var incr = 0;
+    var selstate;
+    var loading_display = setInterval(function(){
+        var loadingtext = document.getElementById('loading');
 
+        if(incr%3==0){
+            loadingtext.innerHTML = 'loading.'
+        }
+        else if(incr%3==1){
+            loadingtext.innerHTML = 'loading..'
+        }
+        else{
+            loadingtext.innerHTML = 'loading...'
+        }
+        incr++;
+    },450);
 	var myJsonRecipients = [];
 	var myJsonSenders = [];
-	var width = 1200;
-	var height = 500;
+	var width = 900;
+	var height = 450;
+
+    var letterlen = 690;
 	var padding = 50;
-	var sortingOptions = ['Alphabetical by Recipient', 'Number Received (Ascending)', 
-							'Number Received (Descending)'];
+	var sortingOptions = ['Names (Alphabetical)',
+							'Number Received (Descending)', '  Average Length (in characters)'];
 
 	d3.json("../data/whitmanjson.json", function(data){
+        clearInterval(loading_display);
+        document.getElementById('loading').innerHTML = '';
 
 		data.forEach(function(d){
-			if(recipients.indexOf(d.recipient)==-1){
-				if(d.recipient == 'Louisa Van Velsor Whitman' || d.recipient == 'Walt Whitman' || d.recipient == ''){
+			if(recipients.indexOf(d.recipient)== -1){
+				if(d.recipient == 'Walt Whitman' || d.recipient == ''){
 
 				}
 				else{
+                    urls.push([d.url]);
+                    avgCharcount.push(d.text.length);
+                    if(d.text.length < 710){
+                        firstWords.push([d.text.substring(0,letterlen)])
+                    }
+                    else{
+                        firstWords.push([d.text.substring(0,letterlen) + '...'])
+                    }
+
 					recipients.push(d.recipient);
 					recipOccurances[recipients.indexOf(d.recipient)] = 1;
 				}
 			}
 			else{
+                avgCharcount[recipients.indexOf(d.recipient)] += d.text.length
+                urls[recipients.indexOf(d.recipient)].push(d.url)
+                 if(d.text.length < 710){
+                        firstWords[recipients.indexOf(d.recipient)].push(d.text.substring(0,letterlen))
+                    }
+                    else{
+                        firstWords[recipients.indexOf(d.recipient)].push(d.text.substring(0,letterlen) + '...')
+                    }
+
 				recipOccurances[recipients.indexOf(d.recipient)]++;
 			}
 		})
 	
 		for(var i=0; i<recipients.length; i++){
-			myJsonRecipients.push({recipient: recipients[i], occurances: recipOccurances[i]});
+			myJsonRecipients.push({recipient: recipients[i], occurances: recipOccurances[i], urls : urls[i], firstWords:firstWords[i], avgChars:1.0*avgCharcount[i]/urls[i].length});
+           // console.log(myJsonRecipients[i].avgChars);
 		}
 
-		var maxRecip = d3.max(recipOccurances,function(d){
+        var maxChars = d3.max(myJsonRecipients, function(d){
+            return d.avgChars;
+        })
+
+        var minChars = d3.min(myJsonRecipients, function(d){
+            return d.avgChars;
+        })
+
+         var avgCharScale = d3.scale.log()
+                .domain([minChars,maxChars])
+                .range([1,256])
+            console.log(minChars,maxChars);
+            var maxRecip = d3.max(recipOccurances,function(d){
 			return d;
 		});
 
 //optional data sorting functions
 		function sortAscending(){
 			myJsonRecipients.sort(function(a,b){
-				return a.occurances - b.occurances;
+				return b.occurances - a.occurances;
 			});
 		}
 
-		function sortDescending(){
+		function sortAvgChars(){
 			myJsonRecipients.sort(function(a,b){
-				return b.occurances - a.occurances;
+				return b.avgChars - a.avgChars;
 			})
 		}
 
@@ -85,19 +207,22 @@
 		}
 
 //create scaling with d3
-		var radScale = d3.scale.linear()
-							.domain([0,maxRecip])
-							.range([1,12]);
 
-		var yScale = d3.scale.linear()
-							.domain([0, maxRecip])
-							.range([height-padding, padding]);
+
+		var radScale = d3.scale.log()
+							.domain([1,maxRecip])
+							.range([3,35]);
+        console.log(maxRecip);
+		var yScale = d3.scale.sqrt()
+							.domain([1, maxRecip])
+							.range([height-(padding), padding*2]);
 //setup the svg element
 		var svg = d3.select('body')
 					.append('svg')
 					.attr('width',width)
 					.attr('height',height)
 					.attr('class', 'svg');
+
 
 		svg.append('g')
 			.classed('chart', true)
@@ -106,53 +231,79 @@
 //add the labels
 		d3.select('svg g.chart')
     	.append('text')
-    	.attr({'id': 'detailLabel', 'x': 50, 'y': padding})
-    	.style({'font-size': '16px','fill': '#333', 'font-family': 'sans-serif'});
+    	.attr({'id': 'detailLabel', 'x': 74, 'y': padding })
+    	.style({'font-size': '20px','fill': '#333', 'font-family': 'Ubuntu Mono'});
 
     	d3.select('svg g.chart')
     	.append('text')
-    	.attr({'id': 'letterCount', 'x': 50, 'y': padding + 25})
-    	.style({'font-size': '16px','fill': '#333', 'font-family': 'sans-serif'});
+    	.attr({'id': 'letterCount', 'x': 74, 'y': padding +25})
+    	.style({'font-size': '12px','fill': '#333','width':'130px', 'font-family': 'Ubuntu Mono', 'height':'200px'});
+
+        d3.select('svg g.chart')
+    	.append('text')
+    	.attr({'id': 'snippet', 'x': 350, 'y': padding})
+    	.style({'font-size': '12px','fill': '#333', 'font-family': 'Ubuntu Mono'});
 
     	d3.select('#sorting-menu')
-    		.selectAll('li')
+    		.selectAll('div')
     		.data(sortingOptions)
     		.enter()
-    		.append('li')
-    		.style('cursor','pointer')
+    		.append('div')
+
+            .attr({'id': 'letterCount', 'x': 505})
+    		.style({'cursor':'pointer','left':'150px','line-height':'23px','font-size': '13px','fill': '#333', 'font-family': 'Ubuntu Mono','color':'grey'})
+            .style({'margin':'6px','padding':'5px','width':'230px','display':'inline'})
+            .on('mouseover', function(){
+
+                    d3.select(this).transition().style({'color':'red'});
+                })
+            .on('mouseout', function(d){
+
+                    d3.select(this).transition().style({'color':'grey'});
+                })
+
     		.text(function(d){
     			return d;
     		})
     		.on('click', function(d){
     			//better way to do this I'm sure
-    			switch(d){
+
+    			selstate = d;
+                switch(d){
+
     				case sortingOptions[0]:
-    				sortAlphabeticalByFirst();
-    				updateCircles();
-    				break;
+
+    				    sortAlphabeticalByFirst();
+    				    updateCircles();
+    				    break;
     				case sortingOptions[1]:
-    				sortAscending();
-    				updateCircles();
-    				break;
-    				default:
-    				sortDescending();
-    				updateCircles();
+    				    sortAscending();
+    				    updateCircles();
+    				    break;
+    				case sortingOptions[2]:
+    				    sortAvgChars();
+    				    updateCircles();
+                        break;
+                    default:
+                        break;
     			}
     		});
 
     	function updateCircles(){
     		circlesRecip.data(myJsonRecipients)
-    					.transition()
+    					.transition().duration(700)
     					.attr('cx', function(d, i){
-							// return radScale(maxRecip)/2 + radScale(maxRecip)*i;
 							//each dot had space 6 wide
-							return 4 + 8*i;
+							return 5 + 5*i;
 						})
 						.attr('cy', function(d){
 							return yScale(d.occurances);
 						})
+                        .attr('fill', function(d){
+                                var c = avgCharScale(d.avgChars)
+                                return d3.rgb(140, c,100 - c)
+                            })
 						.attr('r', function(d){
-							// var radius = d.occurances > 1 ? radScale(d.occurances) : 0;
 							var radius = radScale(d.occurances);
 							return radius;
 						});
@@ -165,23 +316,28 @@
 						.data(myJsonRecipients)
 						.enter()
 						.append('circle')
-						.attr('fill', '#cc0344')
+						 .attr('fill', function(d){
+                                var c = avgCharScale(d.avgChars)
+                                return d3.rgb(140, c,100 - c)
+                            })
 						.attr('cx', function(d, i){
-							// return radScale(maxRecip)/2 + radScale(maxRecip)*i;
+
 							//each dot had space 6 wide
-							return 4 + 8*i;
+							return 5 + 5*i;
 						})
 						.attr('cy', function(d){
 							return yScale(d.occurances);
 						})
 						.attr('r', function(d){
-							// var radius = d.occurances > 1 ? radScale(d.occurances) : 0;
 							var radius = radScale(d.occurances);
 							return radius;
 						})
+
 						.style('cursor', 'pointer')
+
 						.on('mouseover', function(d){
 							d3.select(this)
+                                .attr('r', function(d){return 1.4 * radScale(d.occurances)})
 								.style('stroke', '#ccc')
 								.style('stroke-width', '3px');
 							d3.select('svg g.chart #detailLabel')
@@ -189,13 +345,29 @@
 								.transition()
 								.duration(100)
 								.style('opacity', 1);
-							d3.select('svg g.chart #letterCount')
-								.text('Letters Recieved: ' + d.occurances)
+
+
+						})
+                       .on('mousemove',function(d,i){
+                             var x = (d3.mouse(this)[0] - (5 + 5*i) + 1.4 * radScale(d.occurances)) / (2.8 * radScale(d.occurances)) ;
+
+                             d3.select("#letter").html(d.firstWords[Math.floor(x * d.firstWords.length)])
+                                     .transition()
+								     .duration(100)
+                                     .style('opacity',0.65);
+                             d3.select('svg g.chart #letterCount')
+								.text('Letter ' +  Math.ceil(x * d.urls.length) + ' of ' + d.occurances)
 								.transition()
 								.style('opacity', 1);
-						})
+
+
+                        })
 						.on('mouseout', function(d, i) {
 							d3.select(this)
+                                .attr('r', function(d){
+							    var radius = radScale(d.occurances);
+							    return radius;
+						            })
 								.style('stroke-width', '0px');
 							d3.select('svg g.chart #detailLabel')
 								.transition()
@@ -203,7 +375,16 @@
 							d3.select('svg g.chart #letterCount')
 								.transition()
 								.style('opacity', 0);
-						});
+                             d3.select("#letter")
+                                     .transition()
+								     .duration(100)
+                                     .style('opacity',0);
+						})
+                        .style('opacity', 0.5)
+                        .on('click', function(d,i){
+                            var x = (d3.mouse(this)[0] - (5 + 5*i) + 1.4 * radScale(d.occurances)) / (2.8 * radScale(d.occurances)) ;
+                            window.open(d.urls[Math.floor(x * d.urls.length)]);
+                          })
 	})
 
 	</script>
